--- a/config.yml
+++ b/config.yml
@@ -1,11 +1,11 @@
-name: "⚡am"
+name: "Sam Asija"
 picture: "assets/img/picture.jpg"
 bio: "Explorer of fun stuff."
 meta:
   lang: "en"
   description: "Explorer of fun stuff."
   title: "Sam's Nest"
-  author: "Sam"
+  author: "Sam Asija"
   siteUrl: "https://sam.com.in/"
 links:
   - name: "WatchedList 2024"
