--- a/config.yml
+++ b/config.yml
@@ -10,14 +10,16 @@ meta:
 links:
   - name: "WatchedList 2024"
     url: "https://sam-trg.notion.site/Movies-TV-List-2024-bd6dc70e941d4088bbbd172d5893a176"
-  - name: "Sam Scans"
+  - name: "Sam's Scan"
     url: "https://www.imdb.com/user/ur151289834/ratings/?ref_=ext_shr_lnk"
-  - name: "Sam's Jams"
+  - name: "Sam's Jam"
     url: "https://open.spotify.com/playlist/2bdbb8QYvwzvsOeSiuxHv1?si=y3ws82YSQ2uhOj_Ft6FuOQ"
-  - name: "Sam Spams?"
+  - name: "Sam's Spam"
     url: "https://sam.com.in/blog"
   - name: "Sam's Cam"
     url: "https://samarth.pp.ua/"
+  - name: "Sam's Gam"
+    url: "https://sam.com.in/blackjack-remix"
   - name: "Blast From The Past"
     url: "https://youtu.be/92YISZb8lIk?si=_5NSiwwTO1ztdm2l"
 theme: "custom"
